--- a/eng/basic_times/index.html
+++ b/eng/basic_times/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>mobx-pack-demo</title>
-    <script src="http://localhost:9000/index.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
+<h3>Basic times</h3>
 <div id="root"></div>
 </body>
 </html>
