basic times title

--- a/eng/basic_times/index.html
+++ b/eng/basic_times/index.html
@@ -6,7 +6,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-<h3>Basic times</h3>
+<h3 class="page-title">Basic times</h3>
 <div id="root"></div>
 </body>
 </html>
